# Recycle-Bin

./: CMakeLists.txt
src/: main.cpp
ui/: const_function.slint  homePage.slint  navbar.slint  warning.slint
